--- a/index.html
+++ b/index.html
@@ -1,48 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quill-like Store</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>InsideDataProject Demo</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Store</div>
-            <div class="search-container">
-                <input type="text" id="searchInput" placeholder="Search products...">
-                <button id="searchButton"><i class="fas fa-search"></i></button>
-            </div>
-            <div class="cart-icon">
-                <i class="fas fa-shopping-cart"></i>
-                <span id="cartCount">0</span>
-            </div>
-        </nav>
-    </header>
+  <!-- Ask an Expert Link -->
+  <div style="position: absolute; top: 10px; right: 20px; z-index: 1000;">
+    <a href="?agent=true" style="text-decoration: none; background-color: #007bff; color: white; padding: 10px 15px; border-radius: 5px; font-family: Arial, sans-serif;">
+      Ask an Expert
+    </a>
+  </div>
 
-    <main>
-        <div class="products-grid" id="productsGrid">
-            <!-- Products will be dynamically inserted here -->
-        </div>
+  <div class="container">
+    <h1>Welcome to Inside Data Project</h1>
+    <p>This is a demo web application with Kore.ai bot integrated.</p>
+    <!-- Add more content or sections here -->
+  </div>
 
-        <div class="cart-sidebar" id="cartSidebar">
-            <h2>Shopping Cart</h2>
-            <div id="cartItems">
-                <!-- Cart items will be dynamically inserted here -->
-            </div>
-            <div class="cart-total">
-                <h3>Total: $<span id="cartTotal">0.00</span></h3>
-                <button id="checkoutButton">Checkout</button>
-            </div>
-        </div>
-    </main>
-
-    <script src="products.js"></script>
-    <script src="script.js"></script>
-    <script src='https://cdn.jsdelivr.net/npm/kore-web-sdk@11.13.0/dist/umd/kore-web-sdk-umd-chat.min.js'></script> 
-    <script src= "bot.js" ></script>
-
+  <script src="bot.js"></script>
+  <script src="script.js"></script>
 </body>
-</html> 
+</html>
