Ask an expert 3

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <!-- Ask an Expert Button -->
             <div style="position: absolute; top: 15px; right: 20px;">
-                <a href="?agent=true" style="text-decoration: none; background-color: #007bff; color: white; padding: 8px 14px; border-radius: 5px; font-family: Arial, sans-serif; font-size: 14px;">
+                <a href="?agent=true" onclick="location.href=this.href; return false;" style="text-decoration: none; background-color: #007bff; color: white; padding: 8px 14px; border-radius: 5px; font-family: Arial, sans-serif; font-size: 14px;">
                     Ask an Expert
                 </a>
             </div>
