Ask an expert 4-  WebSDK API

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <span id="cartCount">0</span>
             </div>
             <!-- Ask an Expert Button -->
-            <div style="position: absolute; top: 15px; right: 20px;">
-                <a href="?agent=true" onclick="location.href=this.href; return false;" style="text-decoration: none; background-color: #007bff; color: white; padding: 8px 14px; border-radius: 5px; font-family: Arial, sans-serif; font-size: 14px;">
-                    Ask an Expert
-                </a>
-            </div>
+<div style="position: absolute; top: 15px; right: 20px;">
+  <button id="askExpertBtn" style="text-decoration: none; background-color: #007bff; color: white; padding: 8px 14px; border-radius: 5px; font-family: Arial, sans-serif; font-size: 14px; border: none; cursor: pointer;">
+    Ask an Expert
+  </button>
+</div>
+
         </nav>
     </header>
 
